# rs-wsProxy

./: .containerignore  Cargo.toml  Containerfile  README.md  compose.yaml
.agents/plans/: TASK-reviewer-follow-up.md
.cargo/: mutants.toml
.github/workflows/: cd.yml  ci.yml
deploy/k8s/: deployment.yaml  service.yaml
src/: config.rs  lib.rs  logging.rs  main.rs  modules.rs  proxy.rs  server.rs
tests/: integration_test.rs  server_test.rs
