[package]
name = "rs-wsProxy"
version = "1.0.0"
edition = "2021"

[lib]
name = "rs_ws_proxy"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio-rustls = "0.26"
rustls = "0.23"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
